// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render NoResult properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  grid-template-rows: minmax(30px,auto);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: inherit;
  text-align: center;
  line-height: 30px;
}

.c0:nth-child(odd) > * {
  background-color: #ffffff;
}

.c0:nth-child(even) > * {
  background-color: #F7F8F9;
}

.c0:not(:last-child) > * {
  border-bottom: 1px solid #ededed;
}

<div>
  <li
    class="sc-AxjAm c0"
  >
    Dummy
  </li>
</div>
`;

exports[`Row should render row properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  grid-template-rows: minmax(30px,auto);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: inherit;
}

.c0:nth-child(odd) > * {
  background-color: #ffffff;
}

.c0:nth-child(even) > * {
  background-color: #F7F8F9;
}

.c0:not(:last-child) > * {
  border-bottom: 1px solid #ededed;
}

<div>
  <li
    class="c0"
  >
    Dummy
  </li>
</div>
`;
